Santi basics for auth

--- a/src/views/partials/navigation.html
+++ b/src/views/partials/navigation.html
@@ -8,13 +8,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link active" href="/"><i class="fas fa-home"></i> Home</a>
+                  <a class="nav-link active" href="/api/home"><i class="fas fa-home"></i> Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/#about"><i class="fas fa-building"></i> About</a>
+                  <a class="nav-link" href="/api/about"><i class="fas fa-building"></i> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/contact"><i class="fas fa-envelope"></i> Contact</a>
+                  <a class="nav-link" href="/api/contact"><i class="fas fa-envelope"></i> Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/api/signout"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
                 </li>
               </ul>
             </div>
