--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,10 +15,6 @@
             width: auto;
         }
     </style>
-
-  
-   
-
 </head>
 
 <body>
@@ -28,7 +24,7 @@
 <div class="container">
     <header class="row">
         <div class="col-lg-12 text-center">
-            <img src="img/piano.jpg" class="animate__bounceIn" alt="nachoPiano" id="piano">
+            <img src="../../img/piano.jpg" class="animate__bounceIn" alt="nachoPiano" id="piano">
             
         </div>
     </header>
@@ -46,9 +42,7 @@
             </div>
         </div>
     </div>
-
     <%- include('partials/footer.html')-%>
-
 </body>
 
 </html>
